--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Engagement&display=swap" rel="stylesheet">
-    <title>Wedding invitation</title>
-    <meta name="description" content="Vignesh & Amrutha - We look forward to your virtual blessings!">
+    <title>Manjunath & Monisha | Wedding invitation</title>
+    <meta name="description" content="Manjunath & Monisha - We look forward to your blessings!">
   </head>
   <body>
     <section id="header" class="header_bg">
