--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="col-lg-6 col-md-6">
                       <h3>Venue</h3>
                         <div class="vratham_div">
-                          <img src="images/pre/venue.png" alt="" class="calender_image">
+                          <a href="https://goo.gl/maps/URrcPNovJHVRxGG59"><img src="images/pre/venue.png" alt="" class="calender_image"></a>
                           <div class="events">
                             <p>Sri Jangama Kshetra Kalyanamantabam,</p>
                             <p>1st Main Road, Chamarajpet,</p>
