--- a/index.html
+++ b/index.html
@@ -171,34 +171,27 @@
           <div class="gallery">
             <h2>Wedding Gallery</h2>
               <div class="row">
-                  <div class="col-md-4">
-                      <img src="images/1.jpg" class="gallery_pic">
-                  </div>
-                  <div class="col-md-4">
-                      <img src="images/2.jpg" class="gallery_pic">
-                  </div>
-                  <div class="col-md-4">
-                      <img src="images/3.jpg" class="gallery_pic">
-                  </div>
-                  <div class="col-md-4">
-                      <img src="images/4.jpg" class="gallery_pic">
-                  </div>
-                  <div class="col-md-4">
-                      <img src="images/5.jpg" class="gallery_pic">
-                  </div>
-                  <div class="col-md-4">
-                      <img src="images/6.jpg" class="gallery_pic">
-                  </div>
-                  <div class="col-md-4">
-                      <img src="images/7.jpg" class="gallery_pic">
-                  </div>
-                  <div class="col-md-4">
-                      <img src="images/8.jpg" class="gallery_pic">
-                  </div>
-                  
-                  
+                  <div class="column">
+                  <img src="images/d1.jpg" >
+                  <img src="images/d2.jpg" >
+                  <img src="images/d4.jpg" >
+                </div>
+                <div class="column">
+                  <!-- <img src="images/d4.jpg" > -->
+                  <img src="images/d6.jpg" >
+                  <img src="images/d5.jpg" >
+                  <img src="images/d3.jpg" >
+                  <!-- <img src="images/d1.jpg" style="width:100%"> -->
+                </div>
+                <div class="column">
+                  <img src="images/d8.jpg" >
+                  <img src="images/d9.jpg" >
+                  <img src="images/d10.jpg" >
+                  <!-- <img src="images/d1.jpg" style="width:100%"> -->
+                </div>
               </div>
-          </div></div>
+          </div>
+      </div>
 
               <div class="final_block">
                   <img src="images/pre/red_heart.png">
