--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section id="header" class="header_bg">
         <div class="container">
             <div class="header_content">
-                <h1>Manjunath & Monisha</h1>
+                <h1>Manjunath & Manjula</h1>
                 <!-- <img src="images/pre/white_heart.png"> -->
                 <!-- <span class="getting_married_btn d-block m-auto">Are getting married</span> -->
                 <h3 class="red_head">Inviting you to address our memorable day</h3>
@@ -59,7 +59,7 @@
                         <img src="images/monisha.jpeg">
                       </div>
                       <div class="col-sm-8 col-md-6 d-block m-auto">
-                        <h3>Monisha S</h3>
+                        <h3>Manjula S</h3>
                         <p>It is the highest honor when received.</p>
                       </div>
 
